[package]
name = "corepc-pr-367-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
corepc-client = { git = "https://github.com/0xb10c/corepc.git", branch = "jamillambert-0918-serde-deny-feature+relative-types-path",  features = ["client-sync"]}
corepc-types = { git = "https://github.com/jamillambert/corepc.git", branch = "0918-serde-deny-feature"}
serde_json = "1.0.145"
