[package]
name = "corepc-pr-367-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
corepc-client = { git = "https://github.com/jamillambert/corepc.git", branch = "0918-serde-deny-feature",  features = ["client-sync"]}
corepc-types = { git = "https://github.com/jamillambert/corepc.git", branch = "0918-serde-deny-feature"}
serde_json = "1.0.145"
